@@ -6,7 +6,7 @@
 		<AssemblyTitle>$(Title)</AssemblyTitle>
 		<Description>A Cities: Skylines mod.</Description>
 		<Authors>algernon,thale5</Authors>
-		<Copyright>Copyright © 2016-2022 algernon, thale5</Copyright>
+		<Copyright>Copyright © 2016-2023 algernon, thale5</Copyright>
 		<Product>$(Title)</Product>
 		<Version>1.1.2</Version>
 		<ManagedDLLPath>$(MSBuildProgramFiles32)/Steam/steamapps/common/Cities_Skylines/Cities_Data/Managed</ManagedDLLPath>
